Methods, minor edits

--- a/main.tex
+++ b/main.tex
@@ -157,21 +157,23 @@ We found that selectivity for scrambled stimuli over flashes correlated with sel
 
 Finally, as a holistic way to quantify tectal network selectivity, we looked at our ability to predict stimuli identity from recorded tectal responses \citep{avitan2016limitations}: a measure known as "stimulus encoding". We ran a multivariate logistic regression on one half of the data, linking amplitudes of responses in each cell to the type of stimulus used in each trial. Then we measured the quality of this linkage on the second half of recorded data (Fig. 2F). The quality of prediction was rather low: 59$\pm$12\% for younger, and 62$\pm$13\% for older tadpoles, with no change in development ($p_t=$ 0.6).
 
-To assess the variability of responses from one tectal cell to another, we performed exploratory factor analysis (principal component analysis, followed by promax rotation) of responses within each preparation. This analysis was restricted to looming stimuli. The first and second principal components explained on average 19$\pm$7\% and 4$\pm$1\% of variance in younger tadpoles, and 24$\pm$14\% and 3$\pm$1\% in older tadpoles, and largely encoded different response timing (Fig. 3A). Cells with early responses to looming stimuli tended to group together within the recorded field (Fig. 3B), and their spatial clustering was reliably identified in each of 30 experiments (see Methods). The most natural explanation for this spatial clustering is that a retinotopic map, which is well known to be present in the tectum \citep{ruthazer2004map}, reproduced a looming stimulus projected on the retina. Across cells, the latency of average response correlated with distance from the retinotopy center ($r=$ 0.35 $\pm$ 0.24; correlations individually significant in 25/30 experiments), despite our latency estimations being noisy, especially for low-amplitude cells (see Methods). Curiously, while visual projections to the tectum are known to be actively remodeled in development \citep{sakaguchi1985refinement,ruthazer2004map,munz2014hebbian}, the quality of functional retinotopic map did not differ between younger and older tadpoles, as correlations between early component prominence and cell position did not change in development (Fig. 3E; $r=$ 0.63 $\pm$ 0.21 and 0.57 $\pm$ 0.25 respectively, $p_t= $0.5), which is similar to reports in Zebrafish \citep{avitan2016limitations}.
+To assess the variability of responses from one tectal cell to another, we performed exploratory factor analysis (principal component analysis, followed by promax rotation) of responses within each preparation. This analysis was restricted to looming stimuli. The first and second principal components explained on average 19$\pm$7\% and 4$\pm$1\% of variance in younger tadpoles, and 24$\pm$14\% and 3$\pm$1\% in older tadpoles, and largely encoded different response timing (Fig. 3A). Cells with early responses to looming stimuli tended to group together within the recorded field (Fig. 3B), and their spatial clustering was reliably identified in each of 30 experiments (see Methods). The most natural explanation for this spatial clustering is that a retinotopic map, which is well known to be present in the tectum \citep{ruthazer2004map}, reproduced a looming stimulus projected on the retina. Across cells, the latency of average response correlated with distance from the retinotopy center ($r=$ 0.35 $\pm$ 0.24; correlations individually significant in 25/30 experiments), despite our latency estimations being noisy, especially for low-amplitude cells (see Methods). Curiously, while visual projections to the tectum are known to be actively remodeled in development \citep{sakaguchi1985refinement,ruthazer2004map,munz2014hebbian}, it seems that the precision of functional retinotopic maps did not differ between younger and older tadpoles, as correlations between cell position in the tectum and early component prominence did not change in development ($r=$ 0.63 $\pm$ 0.21 and 0.57 $\pm$ 0.25 respectively, $p_t= $0.5), which is similar to reports in Zebrafish \citep{avitan2016limitations}.
+
+% Description of heatmaps goes here - TODO
 
 \begin{figure*}[t]
-\includegraphics[width=\linewidth]{fig3.png}
+\includegraphics[width=\linewidth]{fig3.pdf}
 \caption{
-Spatial variability. \textbf{A}. \textbf{B}. \textbf{C}. \textbf{D}. \textbf{E}. \textbf{F}. }
+Responses in space in time. \textbf{A}. Two first components identified in tectal responases (sample stage 49 brain; Principal Component Analysis with promax rotation).  \textbf{B}. Cells in the tectum, colored by the contribution of first (green) and second (purple) response components. Black cross shows a reconstructed retinotopy center. \textbf{C}. Average change of Flash-Looming selectivity with distance from the retinotopy center, for stage 46 (left) and stage 49 (right) tadpoles. \textbf{D}. Activation of tecta in response to Flash, Scrambled, and Looming stimuli, averaged across all experiments. The responses are shown both in time (x-axis) and space (distance from the retinotopy center, y axis), while color shows average activation of cells at this part of the brain, in this moment during response. \textbf{E}. A difference between average responses to Looming and Scrambled stimuli: response to looming starts earlier, but does not last as long as one to scrambled.}
 \end{figure*}
 
 Knowing the projection of the looming stimulus center within the tectum, we could then check whether looming-selective cells were more likely to be found in the center of the expanding activation area (as it would be expected if collision detectors themselves formed a retinotopic map \citep{frost2004review}, or if they were based on feedback excitation \citep{jang2016}), or at the periphery. We found that selectivity for looming stimuli over flash tended to decrease with distance from the estimated projection center (Fig. 3G) for both stage 45 (average $r=-$0.37$\pm$0.27; individual correlations $p_r<$0.05 in 12/14 experiments), and stage 49 tadpoles (average $r=-$0.09$\pm$0.35; $p_r<$0.05 in 12/16 experiments), indicating that looming-selective cells tended to be located in the center of the emerging spatial response. Similarly, at both developmental stages, selectivity decreased with response latency (stage 46: $p_r<$0.05 in 11/14 animals, average $r=-$0.29$\pm$0.11; stage 49: $p_r<$0.05 in 10/16 animals, average $r=-$0.16$\pm$0.21). Both correlations were weaker in older tadpoles ($p_t=$ 0.02 for distance-selectivity, $p_t=$ 0.03 for latency-selectivity), indicating a more uniform distribution of looming-selective cells within the network.
 
-\subsection*{Variability and ensembles}
+\subsection*{Variability and neuronal ensembles}
 
-We then assessed the \textbf{trial-to trial variability} of tectal responses, to see whether it changed in development, as it was reported for spontaneous activity in the tectum \citep{xu2011}. We performed principal component analysis of response waveforms, and looked at the total number of components that was needed to describe 80\% of variability in the data \citep{avitan2017spontaneous}. We found that this number was similar in stage 46 and 49 tadpoles, with a minor increase in response richness in older animals (insignificant for each stimulus alone, but consistent across stimuli): 51$\pm$14 and 65$\pm$28, $p_t$=0.1 for responses to looming stimuli; 49$\pm$12 and 62$\pm$32, $p_t$=0.2 for flashes; 51$\pm$14 and 64$\pm$26, $p_t$=0.1 for scrambled stimuli.
+We checked whether \textbf{trial-to trial variability} of tectal responses increased in development, as it happens to spontaneous activity in the tectum \citep{xu2011}. We performed principal component analysis of response waveforms, and looked at the total number of components that was needed to describe 80\% of data variance \citep{avitan2017spontaneous}. We found that this number was similar in stage 46 and 49 tadpoles, with a possible mild increase in response richness in older animals (insignificant for each stimulus alone, but consistent across stimuli: 51$\pm$14 and 65$\pm$28, $p_t$=0.1 for looming stimuli; 49$\pm$12 and 62$\pm$32, $p_t$=0.2 for flashes; 51$\pm$14 and 64$\pm$26, $p_t$=0.1 for scrambled).
 
-To better describe network activation variability, we used spectral clustering technique, and looked for \textbf{ensembles} of tectal cells that were active or silent together on a trial-by-trial basis \citep{thompson2016ensembles}. Unlike for recordings of spontaneous activity, we could not easily aggregate activity states into clusters \citep{avitan2017spontaneous}, as activation in our networks was driven by shared sensory inputs. Instead, we subtracted normalized average responses of each cell from its responses in individual trials, and calculated pairwise correlations on the remaining “anomalies” of trial-by-trial activation (see “Methods”). We turned these pairwise correlations into pairwise distances in a multidimensional space, ran a series of spectral clustering partitions \citep{ng2002spectral}, and of all possible partitions, picked the one that maximized spectral modularity \citep{newman2006modularity,gomez2009community} (see Methods for details). We found that the number of ensembles did not differ between younger and older tadpoles (10$\pm$5 in stage 45, 11$\pm$11 in stage 49; $p_t$=0.9; Fig. 3X), but in older tadpoles ensembles were more coordinated with each other,  producing lower values of network modularity (0.14$\pm$0.05 to 0.09$\pm$0.06, $p_t$=0.03; Fig XXX). Tectal ensembles also tended to be spatially localized (Fig. 3XXX): cells that shared an ensemble were on average closer to each other than to cells from different ensembles, for both younger (29$\pm$9\% closer) and older animals (25$\pm$10\% closer; no difference in development $p_t$=0.3).
+To better describe network activation variability, we used spectral clustering to find \textbf{ensembles} of tectal cells that were active or silent together on a trial-by-trial basis \citep{thompson2016ensembles}. Unlike for recordings of spontaneous activity, we could not easily aggregate activity states into clusters \citep{avitan2017spontaneous}, as activation in our networks was driven by shared sensory inputs. Instead, we subtracted normalized average responses of each cell from its responses in individual trials, and calculated pairwise correlations on the remaining “anomalies” of trial-by-trial activation (see “Methods”). We turned these pairwise correlations into pairwise distances in a multidimensional space, ran a series of spectral clustering partitions \citep{ng2002spectral}, and of all possible partitions, picked the one that maximized spectral modularity \citep{newman2006modularity,gomez2009community} (see Methods for details). We found that the number of ensembles did not differ between younger and older tadpoles (10$\pm$5 in stage 45, 11$\pm$11 in stage 49; $p_t$=0.9; Fig. 3X), but in older tadpoles ensembles were more coordinated with each other,  producing lower values of network modularity (0.14$\pm$0.05 to 0.09$\pm$0.06, $p_t$=0.03; Fig XXX). Tectal ensembles also tended to be spatially localized (Fig. 3XXX): cells that shared an ensemble were on average closer to each other than to cells from different ensembles, for both younger (29$\pm$9\% closer) and older animals (25$\pm$10\% closer; no difference in development $p_t$=0.3).
 
 \subsection*{Network reconstruction}
 
@@ -248,10 +250,9 @@ Together these results suggest that the distribution of selective cells in tecta
 As our recordings were noisy, and sample sizes relatively small, it was hard to expect that we would uncover clear links between selectivity and connectivity of tectal cells in experimental results alone. To compensate for these limitations, and provide a counterpoint to our experimental results, we built a mathematical model of the developing tectum, and ran its results through exactly same set of analyses that we used for our experiments. The model consisted of 81 artificial neurons, arranged in a 9$\times$9 grid, that were all originally connected to each other (every neuron to every neuron) with random positive (excitatory) synaptic weights (Figure 7A). The model operated in discrete time, in 10 ms increments, and we interpreted the output of each neuron at each moment of time as its instantaneous firing rate. At each time step we looked at the network activity in the previous step, calculated total synaptic inputs to each neuron, and used a sliding logistic function to translate these synaptic inputs to postsynaptic spiking (see Methods for details).
 
 \begin{figure*}[!t]
-\includegraphics[width=\linewidth]{fig6.png}
-% Should be fig7.pdf
+\includegraphics[width=\linewidth]{fig7.pdf}
 \caption{
-Developmental model. \textbf{A}. \textbf{B}. \textbf{C}. \textbf{D}. \textbf{E}. \textbf{F}. }
+Developmental model. \textbf{A}. Typical adjacency matrix before simulation (random seed). \textbf{B}. Typical adjacency matrix by the end of simulation. \textbf{C}. Vizualization of neuronal connections in space (with cell positions properly represented). \textbf{D}. Same connectivity graph as in C, but rearranged to reveal its structure. \textbf{E}. Evolution of all input weights to one sample cell, over the course of simulation. \textbf{F}. Evolution of spiking threshold for 9 sample cells, over the course of simulation. \textbf{G}. Response amplitudes to three testing stimuli (Flash, Scramble, Looming) for all cells in one simulation. }
 \end{figure*}
 
 We then introduced three simple developmental rules: spike-time-dependent plasticity (STDP), homeostatic plasticity, and synaptic competition. Our implementation of STDP approximated biological STDP observed in the tectum \citep{zhang1998stdp,mu2006stdp}: if two cells were active one after another in two consecutive time frames, and they were connected with a synapse, the weight of this synapse was increased. Conversely, if two cells were active within the same time frame, the weight of a synapse connecting them was decreased, as it means that one cell would try to activate another cell immediately after it had spiked. The homeostatic plasticity rule adjusted excitability thresholds, trying to keep spiking output of each neuron constant on average \citep{pratt2007intrinsic,turrigiano2011}. Synaptic competition attempted to keep as close to constant as possible both the sum of synaptic inputs to each neuron, and the sum of outputs from it. In practice, it means that every time a synapse connecting neurons $i$ and $j$ increased in strength, all output synapses of neuron $i$ and all input synapses of nuron $j$ were scaled down \citep{hamodi2016nmda,cohen2002synreview,munz2014hebbian}.
@@ -286,7 +287,7 @@ To conclude whether predictions of our model matched biological experiments, we 
 
 %\newgeometry{left=1in} % This page will have smaller margins
 \begin{table}
-    \input{table1.tex}[th]
+    \input{table1.tex}
     \caption{A summary of network phenomena observed in biological experiments, in comparison with the base model, and several reduced models. For clarity, we use $\checkmark$ for "yes", $\times$ for "no", $\land$ for "increase", $\lor$ for "decrease", $\land \lor$ for "increase followed by decrease", and $=$ for "no change". FL stands for "Flash-Looming" comparisons; SL - Scrambled-Looming comparisons; corr denotes correlation.}
 \end{table}
 %\restoregeometry
@@ -394,7 +395,7 @@ We calculated adjusted correlations $c_{ij}$ separately for each of three types 
 
 \[ c'_{ij} = \text{max}\big(0 \, , \, \frac{1}{3} \sum_{s}{c_{ij}^s}\big) \]
 
-We then roughly followed the spectral clustering approach by \citep{ng2002spectral}, with some adjustments that seemed appropriate for ensemble detection. We first transformed our correlation matrix $c_{ij}$ into a matrix of pairwise Euclidean distances:
+We then roughly followed the spectral clustering procedure by \citep{ng2002spectral}, with adjustments that seemed appropriate for ensemble detection. We first transformed our correlation matrix $c_{ij}$ into a matrix of pairwise Euclidean distances:
 
 \[ \varphi_{ij} = 2(1-c_{ij}) \]
 
@@ -402,11 +403,11 @@ and then to affinity matrix $\textbf{A}$:
 
 \[ a_{ij} = \text{exp}(-\varphi_{ij}/\sigma) \]
 
-where $\sigma$ is a free parameter that we set at 10000. We then calculated a diagonal degree matrix $\textbf{D}$ such that $d_{ij} = 0$ for $i \neq j$ , and $d_{ii} = \sum_k{a_ik}$ otherwise. We used $\textbf{D}$ to build a Laplacian matrix $L$, such as:
+where $\sigma$ is a free parameter that we set at 10000. We then calculated a diagonal degree matrix $\textbf{D}$ such that $d_{ij} = 0$ for $i \neq j$ , and $d_{ii} = \sum_k{a_ik}$ otherwise. We used $\textbf{D}$ to build a Laplacian matrix $L$, such that:
 
 \[ L_{ij} = a_{ij}/\sqrt{d_{ii}\cdot d_{jj}} \]
 
-and found eigenvectors $x_1$ .. $x_n$ of matrix $L$. Then we selected a number of ensembles to find $k$, going through all values from 1 (no ensembles) and up to the number of cells (each cell as a separate ensemble). For each $k$, we found first $k$ largest eigenvectors of $L$, stacked them in columns, and renormalized each row of this matrix to give it unit length:
+and found eigenvectors $x_1$ .. $x_n$ of this matrix $L$. Then we selected a good number of ensembles $k$, going through all values from 1 (no ensembles) and up to the number of cells (each cell as a separate ensemble). For each $k$, we found first $k$ largest eigenvectors of $L$, stacked them in columns, and renormalized each row of this matrix to give it unit length:
 
 \[ u_{lm} = \frac{x_{lm}}{\sqrt{\sum_{z=1}^{k}{x_{lz}^2}}} \]
 
@@ -414,7 +415,7 @@ where $x_{lm}$ is an $m$-th element of $l$-th eigenvector of $L$. We then used k
 
 \[ Q_k = \frac{1}{4m}\sum_{ij}{\delta_{ij}\Big(w_{ij}-\frac{d^{out}_i d^{in}_j}{2m}}\Big) \]
 
-Here $d^{out}_i$ and $d^{in}_j$ are weighted out- and in-degrees for nodes $i$ and $j$ respectively: $d^{out}_i = \sum_k{w_{ik}}$ , and $d^{in}_j = \sum_k{w_{kj}}$ ; $m$ is the total number of edges involved: $m = \sum_{ij}{w_{ij}}/2$ , and $\delta_{ij}$ is a signal matrix with $\delta_{ij}=1$ for nodes $i$ and $j$ that belong to the same cluster, and $\delta_{ij} = 0$ otherwise. We then found the number of clusters $K$ that, after spectral clustering, produced highest modularity $Q_K$ across all $Q_k$, and used $K$ as an estimation of the number of ensembles in the network, and corresponding cluster allocation - as the allocation of cells to these ensembles.
+Here $d^{out}_i$ and $d^{in}_j$ are weighted out- and in-degrees for nodes $i$ and $j$ respectively: $d^{out}_i = \sum_k{w_{ik}}$ , and $d^{in}_j = \sum_k{w_{kj}}$ ; $m$ is the total number of edges involved: $m = \sum_{ij}{w_{ij}}/2$ , and $\delta_{ij}$ is a signal matrix with $\delta_{ij}=1$ for nodes $i$ and $j$ that belong to the same cluster, and $\delta_{ij} = 0$ otherwise. Finally, we selected the number of clusters $K$ that, after spectral clustering, produced highest modularity $Q_K$ across all $Q_k$, and used $K$ as an estimation of the number of ensembles in the network, and corresponding cluster allocation - as the allocation of cells to these ensembles.
 
 \textbf{Network reconstruction}. For network reconstruction, we used a modified Transfer Entropy (TE) calculation, adapted from \citep{stetter2012te,gourevitch2007te}. Mathematically, fast Ca imaging recordings, as used in this study, provides a middle ground between commonly used, slower Ca imaging data and multielectrode recordings. In most Ca imaging recordings, the frame acquisition time (100 ms) is an order of magnitude longer than the transmission time between neurons ( 2 ms), which biases analysis towards co-activation analysis. In our data, the high rate of acquisition (12 ms per frame) was very close to typical cell-to-cell activation transmission time in the tectum, so we restricted our analysis to interactions between the activity of each cell at a frame i and their activity at the next frame i+1, ignoring both longer (multiframe), and same-frame interactions.
 
@@ -438,7 +439,7 @@ To analyze degree distributions, we calculated the sum of weights of incoming an
 
 To quantify the share of reciprocal connections for the model data, we multiplied the weight matrix element-wise on itself transposed, and normalized this value by dividing it on the sum of squared weights: $S=\sum_{ji}{w_{ji} w_{ij}} / \sum_{ji}{w_{ji}^2}$ . This value is equal to 1 for symmetric weight matrices, 0 for matrices without reciprocal connections, and smoothly changes between these two values for "intermediate" all-positive matrices.
 
-\textbf{Network analysis}. We reviewed lists of statistical tools applicable to weighted undirected graphs \citep{rubinov2010toolbox}, and selected a sufficiently diverse set of measures to describe  different aspects of our networks, including average connectivity, unevenness of density, and global structure. We also only included measures that are not supposed to change too strongly with the inclusion or exclusion of individual weakly connected nodes, to make sure that metrics estimations would not change catastrophically from one experiment to another because of small variations in the noise level, or a slightly more generous selection of regions of interests for calcium imaging video quantification. Examples of measures that did not satisfy this criterion are cycle order and the “small world” property, that both are sensitive to the inclusion of only a few weak long-ranged connections \citep{papo2016beware}. We used the following list of network metrics:
+\textbf{Network analysis}. We reviewed lists of statistical tools applicable to weighted undirected graphs \citep{rubinov2010toolbox}, and selected a sufficiently diverse set of measures to describe  different aspects of our networks, such as average connectivity, unevenness of density, and global structure. We only included measures that do not change too strongly with the inclusion or exclusion of individual weakly connected nodes, to make sure that metrics estimations would not change catastrophically from one experiment to another because of small variations in noise level, or a slightly more generous selection of regions of interests for calcium imaging video quantification. Examples of measures that did not satisfy this criterion are cycle order and the “small world” property, that both are sensitive to the inclusion of weak long-ranged connections \citep{papo2016beware}. We used the following list of network metrics:
 
 \textbf{Global network efficiency} was calculated using a function from the Brain Connectivity Toolbox \citep{rubinov2010toolbox} on reciprocals for graph weights $R_{ij} = 1/w_{ij}$, and was defined as:
 
@@ -456,11 +457,11 @@ where $k^o_i$ and $k^i_i$ are out- and in-degrees of node $i$ respectively, and 
 
 To estimate \textbf{network modularity}, we used a function from the Brain Connectivity Toolbox, which calculated spectral modularity on a weighted directed graph \citep{reichardt2006community,leicht2008community}.
 
-Our definition of \textbf{hierarchical flow} was inspired by \citep{mones2012hierarchy,czegel2015hierarchy}, but based on the modified Katz centrality \citep{katz1953original,fletcher2018katz}. To calculate Katz centrality, we assumed that on average, each node $j$ collected a flow of incoming signals through all edges $w_{ji}$ leading to this node. The activation arriving through edge $j\leftarrow i$ was proportional to the total activation $z_i$ of node $i$, the weight of this edge $w_{ji}$, a normalization coefficient equal to $1/\text{max}(w_{kl})$, and a damping factor of $d$=0.9. Each node also received a small amount of constant activation $(1-d)$=0.1. The total activation of each node was therefore defined as:
+Our definition of \textbf{flow hierarchy} was inspired by \citep{mones2012hierarchy,czegel2015hierarchy}, but based on modified Katz centrality \citep{katz1953original,fletcher2018katz}. To calculate Katz centrality, we assumed that on average, each node $j$ collected a flow of incoming signals through all edges $w_{ji}$ leading to this node. The activation arriving through edge $j\leftarrow i$ was proportional to the total activation $z_i$ of node $i$, the weight of this edge $w_{ji}$, a normalization coefficient equal to $1/\text{max}(w_{kl})$ across all edges $k\leftarrow l$ in the network, and a damping factor of $d=$ 0.9. Each node also received a small amount of constant activation $(1-d)=$ 0.1. The total activation of each node was therefore defined as:
 
 \[ z_j = (1-d) + \frac{d}{\text{max}_{k,l}(w_{kl})} \sum_{i \neq j}{a_i w_{ji}} \]
 
-Each node then further redirected this activation to other nodes. This definition is very close to that of pagerank centrality \citep{page1999pagerank}, with a minor difference that the weights are not normalized to the value of total outgoing weights for each node $i$: that is, we work with raw weights of $w_{ji}$ rather than $w_{ji}/\sum_k{w_{ki}}$. It means that a node with many outputs has a strong influence over network activation, nodes with weak outgoing edges act almost as dead-ends. Similar to a standard pagerank algorithm, we found solution the stable solution of this problem iteratively, by initializing the network with equal values of centrality, and then running the equation above 100 times or until convergence. Once the distribution of centralities $z_i$ stabilized, we used the difference between the maximal Katz centrality and mean centrality across all nodes as a measure of hierarchical flow in the network \citep{mones2012hierarchy,czegel2015hierarchy}: $h = \text{max}(z_i) - \text{mean}(z_i)$.
+Each node then distributed this activation to other nodes. This definition is close to that of pagerank centrality \citep{page1999pagerank}, with a minor difference that the weights are not normalized to the value of total outgoing weights for each node $i$: that is, we work with raw weights of $w_{ji}$ rather than $w_{ji}/\sum_k{w_{ki}}$. It means that a node with many outputs has a strong influence over network activation, while nodes with weak outgoing edges act as dead-ends. Similar to a standard pagerank algorithm, we found solved this problem iteratively, by initializing the network with equal values of centrality, and running the equation above until convergence (typycally, $\sim$100 times). Once Katz centrality values $z_i$ were found, we used the difference between the maximal Katz centrality and mean centrality across all nodes as a measure of hierarchical flow in the network \citep{mones2012hierarchy,czegel2015hierarchy}: $h = \text{max}(z_i) - \text{mean}(z_i)$.
 
 To check whether network values described above were different from values expected on a random graph, we performed \textbf{graph randomization}, using a variant of degree-preserving reshuffling \citep{maslov2002} that we generalized for directed weighted graphs. For a network with $N_E$ edges we picked 3$\cdot N_E$ random pairs of nodes (nodes $i$, $j$, $k$, and $l$) that had strong connections from $i$ to $j$, and from $k$ to $l$, but weak connections or no connections from $i$ to $l$, and from $j$ to $k$ (we required $w_{ji}>w_{li}$ and $w_{lk}>w_{jk}$). We also required all four nodes to be different ($i \neq j \neq k \neq l$). Then we cross-wired these pairs of nodes, gradually randomizing network topology:
 
