--- a/table1.tex
+++ b/table1.tex
@@ -61,7 +61,7 @@ Degree power constant $\gamma$ change & \land & \land & \land & \lor & \land & \
 Efficiency change & = & \land & \land & \lor & \land & \land & \land \\
 Clustering change & = & \lor & \lor & \lor & \lor & \lor & \lor \\
 Modularity change & \land & \land & \land & \land & \land & \land & \land \\
-Hierarchy change & = & \land & \land & \land & \land & \land & -\\
+Hierarchy change & = & \land & \land & \land & \land & \land & =\\
 \hline
 \multicolumn{8}{l}{\textbf{Properites of selective cells:}}\\
 Center / Periphery / No preference & \text{C} & \text{P} & \text{P} & \text{P} & \text{N} & \text{P} & \text{P}\\
